test/error/ConsoleWriteLineArrayStg.ci
public static class Test
{
	public static bool Run()
	{
		int[2] a;
		a[0] = 5;
		a[1] = 10;
		// FIXME:
		Console.WriteLine(a); //ERROR: Cannot coerce  to printable
		return true;
	}
}
